--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "next-themes": "^0.4.4",
     "preline": "^2.7.0",
     "react": "^18",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18",
     "react-dropzone": "^14.3.6",
     "react-hook-form": "^7.54.2",
@@ -49,6 +50,7 @@
     "@types/formidable": "^3.4.5",
     "@types/node": "^20",
     "@types/react": "^19",
+    "@types/react-date-range": "^1.4.10",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
